RESOLVED FIXED241500
Safari crashes anytime any web links on a webpage are clicked on
https://bugs.webkit.org/show_bug.cgi?id=241500
Summary Safari crashes anytime any web links on a webpage are clicked on
Dean Jackson
Reported 2022-06-09 20:30:16 PDT
In certain VM scenarios, Safari will crash when navigating. This happens when IOSurfaceAccelerator is not available.
Attachments
Dean Jackson
Comment 1 2022-06-09 20:30:45 PDT
Dean Jackson
Comment 2 2022-06-09 20:38:47 PDT
EWS
Comment 3 2022-06-10 13:24:49 PDT
Committed r295460 (251466@main): <https://commits.webkit.org/251466@main> Reviewed commits have been landed. Closing PR #1436 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.