Safari crashes anytime any web links on a webpage are clicked on https://bugs.webkit.org/show_bug.cgi?id=241500 rdar://94655829

Reviewed by Tim Horton.

In some VM scenarios, IOSurfaceAccelerator is not available, which
causes a crash when navigating (creating the back-forward images).
The solution is to check for null after attempting to create the
accelerator.

* Source/WebCore/platform/graphics/cocoa/IOSurface.mm:
(WebCore::IOSurface::convertToFormat): Add a null check and bail.

Canonical link: https://commits.webkit.org/251466@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@295460 268f45cc-cd09-0410-ab3c-d52691b4dbfc